--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "hardhat": "^2.10.2"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^4.7.3",
     "dotenv": "^16.0.2",
-    "ethers": "^5.7.0"
+    "ethers": "^5.7.0",
+    "hardhat-gas-reporter": "^1.0.8"
   }
 }
