--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "license": "ISC",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^1.0.2",
+    "chai": "^4.3.6",
     "hardhat": "^2.10.2"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.7.3",
     "dotenv": "^16.0.2",
     "ethers": "^5.7.0",
-    "hardhat-gas-reporter": "^1.0.8"
+    "ganache-cli": "^6.12.2",
+    "hardhat-gas-reporter": "^1.0.8",
+    "solidity-coverage": "^0.8.2"
   }
 }
